<resources>
    <string name="app_name">AeedzApp</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign Up</string>
    <string name="aeedz_app">Aeedz APP</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="username">Username</string>
    <string name="hello">Hello!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">Register</string>
    <string name="err_msg_enter_username">Enter your Username</string>
    <string name="err_msg_enter_email">Enter your Email</string>
    <string name="err_msg_enter_pwd">Enter your Password</string>
    <string name="err_msg_enter_repeat_pwd">Please repeat your password</string>
    <string name="err_msg_pwd_mismatch">passwords do not match</string>
    <string name="registered_successfully">Registered Successfully</string>
    <string name="registration_failed">Couldn\'t register</string>
    <string name="please_wait">Please wait</string>
</resources>