<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/emailsignupbg">

    <LinearLayout
        android:id="@+id/btn_BackReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:foreground="?attr/selectableItemBackground"
        android:paddingTop="30dp"
        android:paddingEnd="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/backbtn" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/tgrld"
            android:letterSpacing="0.1"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_BackReg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tgrd"
            android:letterSpacing="0.025"
            android:text="@string/hello"
            android:textAllCaps="true"
            android:textColor="@color/AeedzDark"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/et_Username"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/light_edit_text"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingStart="30dp"
            android:paddingEnd="30dp" />

        <EditText
            android:id="@+id/et_Email"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/light_edit_text"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:paddingStart="30dp"
            android:paddingEnd="30dp" />

        <EditText
            android:id="@+id/et_Pwd"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/light_edit_text"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:paddingStart="30dp"
            android:paddingEnd="30dp" />

        <EditText
            android:id="@+id/et_RepeatPwd"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/light_edit_text"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPersonName"
            android:paddingStart="30dp"
            android:paddingEnd="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_Register"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/sign_in_button"
                android:fontFamily="@font/tgrld"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />


        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>